# turing-beavers

./: .gitignore  Cargo.toml  README.md
proptest-regressions/: turing.txt
sqlite-turing/: Cargo.toml
sqlite-turing/src/: lib.rs
src/: lib.rs  main.rs  seed.rs  sql.rs  turing.rs  util.rs  worker.rs
