[package]
name = "turing-beavers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
rand = "0.8.5"

[profile.release]
debug = true
split-debuginfo = "packed"

[profile.release2]
inherits = "release"
opt-level = 3
debug = false
split-debuginfo = "off"
# panic = "abort" # seems to make things slower???
lto = "thin"
