[package]
name = "turing-beavers"
version = "0.1.0"
edition = "2021"
default-run = "turing-beavers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
ctrlc = "3.4.4"
rand = "0.8.5"
smol = "2.0.0"
sqlx = { version = "0.7.4", features = ["sqlite"] }

[profile.release]
debug = true
split-debuginfo = "packed"

[profile.release2]
inherits = "release"
opt-level = 3
debug = false
split-debuginfo = "off"
# panic = "abort" # seems to make things slower???
lto = "thin"
